Created RabbitMQ messaging first form